fix spacing between text and map

--- a/sass/_location.scss
+++ b/sass/_location.scss
@@ -8,6 +8,7 @@
   width: 100%;
   @media only screen and (min-width: 900px) {
     flex-direction: row;
+    gap: 5rem;
   }
 }
 
@@ -39,8 +40,9 @@
   height: 15rem;
   width: 100%;
   margin-top: 3rem;
+
   @media only screen and (min-width: 900px) {
-    margin-left: 7rem;
+    // margin-left: 7rem;
     margin-top: 0;
   }
 }
